# ubuntu_server_alerts_low_batery

./: AlertLowBattery.py  AutoStartScript.py  README.md  alert_low_battery.py  alerts_low_batery.bash  coordinates.py  filter_color.py  gitauto  gitauto.bash  main.py  pyproject.toml  requirements.txt  sort_json.py  weather.py  weather_api_service.py  weather_great.py
one_file/: weather.py
