[project]
name = "gps-weather"
version = "0.1.0"
description = "прога показывающая погоду🌩️ по текущему месту положению(начал разработку в образовательных целях🎯, в том смысле🧠, чтоб научиться пользоваться API🌐)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "gpsd-py3>=0.3.0",
    "requests>=2.32.5",
    "winsdk>=1.0.0b10",
]
